--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="referencias">
                 <h3>Estabalecimento gerido por</h3>
                 <p><a href="#">Gerson Vianna</a></p>
-                <p><a href="#">Lohanna</a></p>
+                <p><a href="#">Lohane</a></p>
             </div>
             <div class="desenvolvido">
                 <h3>Site Desenvolvido por <a href="#">SandsonSoares</a></h3>
