--- a/index.html
+++ b/index.html
@@ -26,13 +26,28 @@
             </div>
         </section>
     </header>
-    <nav class="hotbar">
+    <!-- <nav class="hotbar">
         <ul>
             <li><a href="#" class="interno">Cardápio</a></li>
         </ul>
-    </nav>
+    </nav> -->
 
     <main class="content">
+        <article class="enunciado">
+            <h1>Confira nosso cardápio!</h1>
+            <h3>Escolha um delicioso lanche</h3>
+        </article>
+        <section class="banner">
+            
+            <div class="flair center">
+                <img src="cartaz[0].jpg" alt="Hamburguer pointo do din" class="cartaz top-border">
+                <div class="rodape">
+                    <h3>Escolha seu lanche agora mesmo</h3>
+                    <a href="#" class="buttom">Fazer pedido!</a>
+                </div>
+            </div>
+        </section>
+
 
         <section class="volume">
             <div class="bloco">
