final do dia 15-08-2022

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <img src="cartaz[0].jpg" alt="Hamburguer pointo do din" class="cartaz top-border">
                 <div class="rodape">
                     <h3>Escolha seu lanche agora mesmo</h3>
-                    <a href="#" class="buttom">Fazer pedido!</a>
+                    <a href="cardapio.html" class="buttom">Fazer pedido!</a>
                 </div>
             </div>
         </section>
