--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
         <section class="credito">
             <div class="referencias">
                 <h3>Estabalecimento gerido por</h3>
-                <p><a href="#">Gerson Vianna</a></p>
+                <p><a href="#">Jerson Vianna</a></p>
                 <p><a href="#">Lohane</a></p>
             </div>
             <div class="desenvolvido">
-                <h3>Site Desenvolvido por <a href="https://www.instagram.com/sandson_soares_s/">SandsonSoares</a></h3>
+                <h3>Site Desenvolvido por <a href="https://sandsonsoares.github.io/PortfolioProject/">SandsonSoares</a></h3>
             </div>
         </section>
     </footer>
