--- a/cardapio.html
+++ b/cardapio.html
@@ -1113,7 +1113,7 @@
                 <p><a href="#">Lohane</a></p>
             </div>
             <div class="desenvolvido">
-                <h3>Site Desenvolvido por <a href="#">SandsonSoares</a></h3>
+                <h3>Site Desenvolvido por <a href="https://sandsonsoares.github.io/PortfolioProject/">SandsonSoares</a></h3>
             </div>
         </section>
     </footer>
